--- a/freight1.html
+++ b/freight1.html
@@ -62,20 +62,19 @@
           <li><a href=""></a><p></p></li>
           <li><a href=""></a><p></p></li>
         </ul>
-      </div>
       <div><img src="" alt=""></div>
+      </div>
     </div><!--exp2-->
-
     <!--phone-->
     <div class="service">
       <h1>전국화물실시간배차센터의 전문서비스</h1>
 <ul>
-  <li><a href=""></a><p></p></li>
-  <li><a href=""></a><p></p></li>
-  <li><a href=""></a><p></p></li>
-  <li><a href=""></a><p></p></li>
-  <li><a href=""></a><p></p></li>
-  <li><a href=""></a><p></p></li>
+  <li><a href=""></a><p>전국 전상망 프로그램을 이용하여 전국 어디서나 빠른배차</p></li>
+  <li><a href=""></a><p>고객님의 화물의 크기와 용도에 맞도록 최적의 차량을 배차</p></li>
+  <li><a href=""></a><p>배송을 마칠때 까지 화물을 안전하게 보관 및 운송</p></li>
+  <li><a href=""></a><p>기업에서 이용하는 정기물류, 특수물류 등 전문운송 배차</p></li>
+  <li><a href=""></a><p>가장 효울적인 전국망 배차시스템으로 고객의 물류비용 절감</p></li>
+  <li><a href=""></a><p>전화, 문자, 카톡, 온라인 상담, 이메일 문의 접수 및 즉시 상담</p></li>
 </ul>
 
     <div class="phone2">
