--- a/profilecard/member1.html
+++ b/profilecard/member1.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/632d3e2496.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/profilecard/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="member1">
     <!--프로필 박스-->
