--- a/freight1.html
+++ b/freight1.html
@@ -3,22 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>freight</title>
+    <title>freight1</title>
+    <script
+      src="https://kit.fontawesome.com/103d787f99.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/homepage.css" />
   </head>
   <body>
     <header>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">센터안내</a></li>
-        <li><a href="">운임안내</a></li>
-        <li><a href="">차량안내</a></li>
-        <li><a href="">견적문의</a></li>
-      </ul>
-      <ul>
-        <li><a href="">전화</a></li>
-        <li><a href="">문자</a></li>
-        <li><a href="">카톡</a></li>
-      </ul>
+      <div class="container">
+        <div class="logo">
+          <a href="#"><i class="fa-solid fa-truck" style="color: #ffffff;"></i></a>
+        </div>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">센터안내</a></li>
+          <li><a href="#">운임안내</a></li>
+          <li><a href="#">차량안내</a></li>
+          <li><a href="#">견적문의</a></li>
+        </ul>
+        <ul class="icon">
+          <li>
+            <a href="#"><i class="fa-solid fa-phone"></i>전화</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-regular fa-envelope"></i>문자</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-regular fa-message"></i>카톡</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <div class="front">
       <div>
@@ -28,10 +44,11 @@
         <img src="" alt="" />
       </div>
       <h1>
-        <b>전국화물 실시간배차</b><br>
+        <b>전국화물 실시간배차</b><br />
         화물용달은 전국 어디서나 1533-9943
       </h1>
-    </div><!--front-->
+    </div>
+    <!--front-->
     <div class="exp">
       <h1>
         --화물은 전국 어디서나 최단시간 최적운임으로 실시간 화물용달을 배차해
@@ -40,104 +57,145 @@
       <div class="phone">
         <div class="line1">
           <button><a href=""></a>고객센터 바로전화 1533-9943</button>
-          <div><img src="" alt=""></div>
+          <div><img src="" alt="" /></div>
         </div>
         <div class="line2">
           <button><a href=""></a>담당소장 직통 010-4417-8224</button>
           <div>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <a href=""><img src="/img/icon1.png" alt=""><p>전국 네트워크를 통한 빠른 배차</p></a>
+            <a href=""><img src="" alt=""><p>다마스부터2톤이상 모든 화물자 배차</p></a>
+            <a href=""><img src="" alt=""><p>일반화물, 특수화물, 기업물류 정기배차 운용</p></a>
+            <a href=""><img src="" alt=""><p>안전하고 정확한 배송 서비스</p></a>
             <button><a href=""></a>온라인 견적문의</button>
           </div>
-          </div>
         </div>
-        </div><!--exp-->
+      </div>
+      <!--phone-->
+    </div>
+    <!--exp-->
     <div class="exp2">
       <div class="logo">
         <ul>
-          <li><a href=""></a><p></p></li>
-          <li><a href=""></a><p></p></li>
-          <li><a href=""></a><p></p></li>
-          <li><a href=""></a><p></p></li>
+          <li>
+            <a href=""></a>
+            <p></p>
+          </li>
+          <li>
+            <a href=""></a>
+            <p></p>
+          </li>
+          <li>
+            <a href=""></a>
+            <p></p>
+          </li>
+          <li>
+            <a href=""></a>
+            <p></p>
+          </li>
         </ul>
-      <div><img src="" alt=""></div>
+        <div><img src="" alt="" /></div>
       </div>
-    </div><!--exp2-->
-    <!--phone-->
+    </div>
+    <!--exp2-->
     <div class="service">
       <h1>전국화물실시간배차센터의 전문서비스</h1>
-<ul>
-  <li><a href=""></a><p>전국 전상망 프로그램을 이용하여 전국 어디서나 빠른배차</p></li>
-  <li><a href=""></a><p>고객님의 화물의 크기와 용도에 맞도록 최적의 차량을 배차</p></li>
-  <li><a href=""></a><p>배송을 마칠때 까지 화물을 안전하게 보관 및 운송</p></li>
-  <li><a href=""></a><p>기업에서 이용하는 정기물류, 특수물류 등 전문운송 배차</p></li>
-  <li><a href=""></a><p>가장 효울적인 전국망 배차시스템으로 고객의 물류비용 절감</p></li>
-  <li><a href=""></a><p>전화, 문자, 카톡, 온라인 상담, 이메일 문의 접수 및 즉시 상담</p></li>
-</ul>
+      <ul>
+        <li>
+          <a href="#"></a>
+          <p>전국 전상망 프로그램을 이용하여 전국 어디서나 빠른배차</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>고객님의 화물의 크기와 용도에 맞도록 최적의 차량을 배차</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>배송을 마칠때 까지 화물을 안전하게 보관 및 운송</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>기업에서 이용하는 정기물류, 특수물류 등 전문운송 배차</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>가장 효울적인 전국망 배차시스템으로 고객의 물류비용 절감</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>전화, 문자, 카톡, 온라인 상담, 이메일 문의 접수 및 즉시 상담</p>
+        </li>
+      </ul>
 
-    <div class="phone2">
-      <button>고객센터 바로전화1533-9943</button>
-      <button>담당소장 직통 010-4417-8224</button>
+      <div class="phone2">
+        <button>고객센터 바로전화1533-9943</button>
+        <button>담당소장 직통 010-4417-8224</button>
+      </div>
     </div>
-    </div> <!--service-->
+    <!--service-->
     <div class="charge">
       <h2>운송요금안내</h2>
       <div class="tag">
-        <p></p>
+        <b>운송거리별 요금표(전국권,시내운송)</b><b>단위: 만원(vat별도)</b>
       </div>
       <form>
-    
-        <table>
-
-        </table>
+        <table></table>
       </form>
-      <div><b>※최저요금 기준으로<b>기사 수작업, 화물의 특성, 결제방식</b>등에 따라서</b>
-        <a href="">요금조정 있을 수 있음</a></div>
-    </div><!--charge-->
+      <div>
+        <b
+          >※최저요금 기준으로<b>기사 수작업, 화물의 특성, 결제방식</b>등에
+          따라서</b
+        >
+        <a href="#">요금조정 있을 수 있음</a>
+      </div>
+    </div>
+    <!--charge-->
     <div class="phone3">
       <div><p>고객센터</p></div>
       <div><b>전국어디서나 1533-9943</b><b>기타문의</b></div>
       <div>
         <ul>
-          <li>고객센터 바로전화</li>
-          <li>담당소장 직통</li>
+          <li>고객센터 바로전화1533-9943</li>
+          <li>담당소장 직통010-4417-8224</li>
         </ul>
       </div>
-      </div><!--phone3-->
-      <div class="info">
+    </div>
+    <!--phone3-->
+    <div class="info">
       <div>
-        <h2></h2>
+        <h2>화물차량안내</h2>
       </div>
       <div class="pic">
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </div>
+      <!--pic-->
+    </div>
+    <!--info-->
+    <div class="mail">
+      <div>
+        <h12>온라인 견적문의</h12>
+      </div>
+      <div class="mwssage">
         <ul>
           <li></li>
           <li></li>
           <li></li>
+          <li></li>
         </ul>
-      </div><!--pic-->
-      <div>
-        <h2></h2>
       </div>
-    </div><!--info-->
-    <div class="message">
-      <div>
-        <h2></h2>
-      </div>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
     </div>
-    <!--message-->
     <footer>
-      <img src="" alt="">
+      <img src="" alt="" />
       <p>전국화물실시간 배차 해피콜 전국화물</p>
-      <b></b>
-      <b></b>
+      <b>상호:(주)해피콜전국화물</b
+      ><b>주소:대전 유성구 계룡로 105번길 15, 312호(봉명동, 한진오피스텔)</b>
+      <b>전화:1533-9943</b><b>팩스:042-822-4207</b>
+      <br />
+      <b>사업자등록번호:469-81-02356</b><b>대표:김신,문정은</b
+      ><b>담당소장:김명의</b><b>화물운송사업허가증:관허 제 주선 1999-03-06호</b>
     </footer>
   </body>
 </html>
