--- a/freight1.html
+++ b/freight1.html
@@ -62,10 +62,13 @@
         <div class="line2">
           <button><a href=""></a>담당소장 직통 010-4417-8224</button>
           <div>
-            <a href=""><img src="/img/icon1.png" alt=""><p>전국 네트워크를 통한 빠른 배차</p></a>
-            <a href=""><img src="" alt=""><p>다마스부터2톤이상 모든 화물자 배차</p></a>
-            <a href=""><img src="" alt=""><p>일반화물, 특수화물, 기업물류 정기배차 운용</p></a>
-            <a href=""><img src="" alt=""><p>안전하고 정확한 배송 서비스</p></a>
+            <ul class="if">
+              <li><img src="/img/icon1.png" alt=""><a href="#">전국 네트워크를 통한 빠른 배차</a></li>
+              <li><a href="">다마스부터2톤이상 모든 화물자 배차</a></li>
+              <li><a href="">일반화물, 특수화물, 기업물류 정기배차 운용</a></li>
+              <li><a href="">안전하고 정확한 배송 서비스</a></li>
+            </ul>
+           
             <button><a href=""></a>온라인 견적문의</button>
           </div>
         </div>
