--- a/freight1.html
+++ b/freight1.html
@@ -72,7 +72,7 @@
         <div class="lineGroup">
           <div class="line1">
             <div class="exp1">
-              <img src="/홈페이지구현/img/homepage1.jpg" alt="" />
+              <img src="/css-example-main/홈페이지구현/img/truck1.png" alt="" />
             </div>
           </div>
           <div class="line2">
@@ -124,13 +124,8 @@
               가능합니다.
             </p>
           </li>
-          <li>
-            <a href=""><i class="fa-solid fa-truck-fast"></i></a>
-            <p>
-              화물을 안전하게 배송함을 최우선으 <br />으로 하여 안심 할 수
-              있습니다.
-            </p>
-          </li>
+        </ul>
+        <ul>
           <li>
             <a href=""><i class="fa-regular fa-credit-card"></i></a>
             <p>
@@ -138,9 +133,16 @@
               드립니다.
             </p>
           </li>
+          <li>
+            <a href=""><i class="fa-solid fa-truck-fast"></i></a>
+            <p>
+              화물을 안전하게 배송함을 최우선으 <br />으로 하여 안심 할 수
+              있습니다.
+            </p>
+          </li>
         </ul>
       </div>
-        <div><img src="/홈페이지구현/img/truck1.png" alt="" /> <img src="" alt="" /></div>
+        <div class="picture"><img src="/css-example-main/홈페이지구현/img/truck2.png" width="660px" height="501px" /> <img src="" alt="" /></div>
     </div>
     <!--exp2-->
     <div class="service">
