--- a/freight1.html
+++ b/freight1.html
@@ -72,7 +72,7 @@
         <div class="lineGroup">
           <div class="line1">
             <div class="exp1">
-              <img src="/css-example-main/홈페이지구현/img/truck1.png" alt="" />
+              <img src="/img/truck1.png" alt="" />
             </div>
           </div>
           <div class="line2">
@@ -113,15 +113,13 @@
           <li>
             <a href=""><i class="fa-solid fa-clock"></i></a>
             <p>
-              빠르고 정확한 배차 배송 서비스로 <br />
-              고객의 시간을 절약해 드립니다.
+              빠르고 정확한 배차 배송 서비스로 고객의 시간을 절약해 드립니다.
             </p>
           </li>
           <li>
             <a href=""><i class="fa-solid fa-person"></i></a>
             <p>
-              실시간 상담접수로 전화, 문자, 카톡, <br />온라인문의 모두
-              가능합니다.
+              실시간 상담접수로 전화, 문자, 카톡, 온라인문의 모두 가능합니다.
             </p>
           </li>
         </ul>
@@ -129,25 +127,26 @@
           <li>
             <a href=""><i class="fa-regular fa-credit-card"></i></a>
             <p>
-              가장 효율적인 배차 시스템으로 고객 <br />의물류비용을 절감해
-              드립니다.
+              가장 효율적인 배차 시스템으로 고객 의물류비용을 절감해 드립니다.
             </p>
           </li>
           <li>
             <a href=""><i class="fa-solid fa-truck-fast"></i></a>
             <p>
-              화물을 안전하게 배송함을 최우선으 <br />으로 하여 안심 할 수
-              있습니다.
+              화물을 안전하게 배송함을 최우선으 으로 하여 안심 할 수 있습니다.
             </p>
           </li>
         </ul>
       </div>
-        <div class="picture"><img src="/css-example-main/홈페이지구현/img/truck2.png" width="660px" height="501px" /> <img src="" alt="" /></div>
+      <div class="picture">
+        <img src="/img/truck2.png" width="660px" height="501px" />
+        <img src="" alt="" />
+      </div>
     </div>
     <!--exp2-->
     <div class="service">
       <h1>전국화물실시간배차센터의 전문서비스</h1>
-      <ul>
+      <ul class="bt">
         <li>
           <a href="#"
             ><i class="fa-solid fa-user-clock" style="color: #ff0000"></i
@@ -181,7 +180,7 @@
             ><i class="fa-solid fa-credit-card" style="color: #ff0000"></i
           ></a>
           <h3>운송비 절감</h3>
-          <p>가장 효울적인 전국망 배차시스템으로 고객의 물류비용 절감</p>
+          <p>가장 효울적인 전국망 배차 시스템 으로 고객의 물류비용 절감</p>
         </li>
         <li>
           <a href="#"
@@ -191,20 +190,28 @@
           <p>전화, 문자, 카톡, 온라인 상담, 이메일 문의 접수 및 즉시 상담</p>
         </li>
       </ul>
-
-      <div class="phone2">
-        <button>고객센터 바로전화1533-9943</button>
-        <button>담당소장 직통 010-4417-8224</button>
-      </div>
     </div>
     <!--service-->
+    <div class="phone2">
+      <div class="bu">
+        <button>
+          <i class="fa-solid fa-phone"></i>고객센터 바로전화1533-9943
+        </button>
+      </div>
+      <div class="bu">
+        <button>
+          <i class="fa-solid fa-phone"></i>담당소장 직통 010-4417-8224
+        </button>
+      </div>
+    </div>
+    <!--phone2-->
     <div class="charge">
       <h2>운송요금안내</h2>
       <div class="tag">
         <b>운송거리별 요금표(전국권,시내운송)</b><b>단위: 만원(vat별도)</b>
       </div>
       <form>
-        <table>
+        <table border=1  frame=below rules=rows>
           <tr>
             <td>차량종류</td>
             <td>0.5톤</td>
@@ -350,7 +357,7 @@
           </tr>
         </table>
       </form>
-      <div>
+      <div class="c-end">
         <b
           >※최저요금 기준으로<b>기사 수작업, 화물의 특성, 결제방식</b>등에
           따라서</b
