--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -29,61 +29,173 @@
 </div><!--title_menu-->
 <div class="intro">
 <div>
-<p>언론보드</p><p><a href="#"></a></p>
-<h1></h1>
-<h1></h1>
+  <section>
+    <p>About</p>
+    <p>Pp는인류와 과학기술의 <br> 더 나은 미래를 위해 연구를 지속하고 있습니다.</p>
+    <section>
+      <button>
+        company <a href=""></a>
+      </button>
+    </section>
+  </section>
 </div>
-
+<div>
+  <ul class="in">
+    <li><a href=""></a></li>
+    <li></li>
+    <li></li>
+  </ul>
+  <ul class="in">
+    <li><a href=""></a></li>
+    <li></li>
+    <li></li>
+  </ul>
+</div>
 </div><!-- intro -->
 <div class="intro2">
   <div class="head">
+    <p>About</p>
+    <p>알러지, 결핵<br> 호흡기 질환에 특화된 <br>집단 시약을 개발하고<br>제공합니다</p>
+    <button>
+      view <a href=""></a>
+    </button>
   </div>
-  <div>
-    <ul>
-      <li>
-        <li></li>
-      </li>
+  <div class="cards">
+    <ul class="card">
+      <li><p>면역진단</p></li>
+      <li><p>01</p></li>
+      <li><h1>알러지</h1></li>
+      <li><h3>AdanSure㈜ AlloScreen
+        Max108 Panel</h3></li>
+      <li><p>단 한번의 검사로 108종의
+        알레르기의 대한 결과를 확인할수있는
+        알러지스크리닝 제품</p></li>
+      <li><button></button></li>
+    </ul>
+    <ul class="card">
+      <li><p>면역진단</p></li>
+      <li><p>01</p></li>
+      <li><h1>알러지</h1></li>
+      <li><h3>AdanSure㈜ AlloScreen
+        Max108 Panel</h3></li>
+      <li><p>단 한번의 검사로 108종의
+        알레르기의 대한 결과를 확인할수있는
+        알러지스크리닝 제품</p></li>
+      <li><button></button></li>
+    </ul> <ul class="card">
+      <li><p>면역진단</p></li>
+      <li><p>02</p></li>
+      <li><h1>잠벅결핵</h1></li>
+      <li><h3>AdanSure I3 TB-lGRA</h3></li>
+      <li><p>체혈 다음 날 바로 결과 확인이
+        가능한, 잠복결핵 검사의 완벽한 솔루션
+      </p></li>
+      <li><button></button></li>
+    </ul> <ul class="card">
+      <li><p>분자진단</p></li>
+      <li><p>03</p></li>
+      <li><h1>호흡기 바이러스</h1></li>
+      <li><h3>AdanSure RV-Plus 
+        real-time RT-PCR</h3></li>
+      <li><p>호흡기 바이러스 15종을 <br>
+      한번에 검사할 수 있는 시약</p></li>
+      <li><button></button></li>
+    </ul> <ul class="card">
+      <li><p>분자진단</p></li>
+      <li><p>04</p></li>
+      <li><h1>결핵 및 비결핵상산균</h1></li>
+      <li><h3>AdanSure TB/NTM <br>
+      real-time PCR</h3></li>
+      <li><p>결핵균 및 비결핵 항산균을<br>
+      동시에 검출할 수 있는 시약</p></li>
+      <li><button></button></li>
     </ul>
   </div>
   <div></div>
 </div><!-- intro2 -->
 <div class="main">
   <div class="product">
-    
+   <p>
+    ESG MANAGEMENT
+   </p> 
+   <div class="promo">
+    <h1>
+      쉬운길보다는 옳은 길로,<br>
+      더 나은 미래를 위한 탐구는 계속됩니다.
+    </h1>
+    <button></button>
+   </div>
   </div>
   <div class="p_lntro">
 <ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li><a href=""></a><p>
+    Environmental<br>Safety and Health<br>(EHS)
+    <br>
+    Management
+    <p>환경안전보건
+      <br>
+      (EHS)경영</p>
+  </p></li>
+</ul>
+<ul>
+  <li><a href=""></a><p>
+    Ethical<br>management
+  </p>
+  <p>윤리경영</p>
+      </li>
+</ul>
+<ul>
+  <li><a href=""></a><p>
+    compliance <br>
+  management</p>
+    <p>
+      준법경영</p>
+  </li>
 </ul>
   </div>
-  </div>
-  <!-- main -->
+  </div><!-- main -->
   <div class="site">
-<div></div>
-<div></div>
+<div><p>CAREERS
+</p></div>
+<div>
+  <p>인비트로스에서 무한한 가능성을 키울 <br>인재를 찾습니다.</p>
+  <button><a href=""></a></button>
+</div>
 <div><ul>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li class="box">
+     <b>IN</b><b>navation</b>
+     <br>
+     <p>획기적이고 창의적인
+      <br>아이디어를 제시하고 
+      만들어가는<br>능력을 갖춘 인재</p>
+  </li>
+  <li class="box">
+    <b>VI</b><b>sionary</b>
+    <br>
+    <p>비전을 간추고 미래를
+     <br>예측하고 선제적으로
+     <br>나아가는
+     <br>역량을 갖춘 인재</p>
+ </li>
+ <li class="box">
+  <b>TR</b><b>ailblazer</b>
+  <br>
+  <p>새로운 길을 개척하며
+   <br>혁신적으로 변화를 열어가는 
+   <br>리더십을 가진 인재</p>
+</li>
+<li class="box">
+  <b>o</b><b>pen-minded</b>
+  <br>
+  <b>s</b><b>ynthesizer</b>
+  <br>
+  <p>다양한 아이디어를
+   <br>받아들이고
+   <br>조율하는 마인드를 갖춘 인재</p>
+</li>
 </ul>
 </div>
   </div><!-- site -->
-  <div class="employment">
-    <div></div>
-    <div></div>
-    <div>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-  </div><!-- employment -->
 <div class="news">
 <div></div>
 <div>
