--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>page</title>
   <script src="https://kit.fontawesome.com/103d787f99.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="/기업형홈페이지/homepage.css">
 </head>
 <body>
   <div class="container">
+    <div class="menu_pic">
 <div class="title_menu">
 <div class="logo">
-
+<div>
+  <i class="fa-brands fa-pied-piper-pp" style="color: #63E6BE;"></i>
+</div>
 </div> <!-- logo -->
 <div class="mode">
   <ul>
@@ -23,8 +27,7 @@
   </ul>
   </div><!-- mode -->
   <div class="toggleline">
-    <a href="#"><img src="" alt=""></a>
-    <a href="#"><img src="" alt=""></a>
+    <i class="fa-solid fa-bars" style="color: #63E6BE;"></i>
   </div><!--toggleline-->
 </div><!--title_menu-->
 <div class="intro">
@@ -52,6 +55,7 @@
   </ul>
 </div>
 </div><!-- intro -->
+</div>
 <div class="intro2">
   <div class="head">
     <p>About</p>
@@ -197,19 +201,35 @@
 </div>
   </div><!-- site -->
 <div class="news">
-<div></div>
+<div>
+  <div><p>News Room
+  </p></div>
+  <div>
+    <p>인비트로스의 최신 소식을<br>만나보세요</p>
+    <button><a href=""></a></button>
+  </div>
+</div>
 <div>
   <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><img src="" alt=""></li>
+    <li><p>공지사항</p><p>LMCE 2024 Education 
+      Workshop 진행</p></li>
+      <li><p>일정:2024년 9월26일(목) 
+        오전8시</p><p>-장소:코엑스 서울, B2 Hall, Room A</p>
+      <p>2024-09-24</p></li>
   </ul>
 </div>
    <div>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><img src="" alt=""></li>
+      <li><p>보도자료</p><p>코로나19 키트 시장 진출</p></li>
+        <li><p>일정:2024년 8월7일 
+          </p><p>
+            'AdvanSure™ SARS-CoV-2 IgG (S1) <br>
+             ELISA' 수출용 품목허가 [프레스나인] <br>
+            LG화학이 코로나19 진단키트 <br>
+            시장에 뛰어든다</p>
+        </li>
     </ul>
    </div>
    <ul>
@@ -224,18 +244,35 @@
 </div><!-- news -->
   </div><!--container-->
   <footer>
-<div>
-  <ul>
-    <li></li>
-    <li></li>
-  </ul>
-</div>
-<div>
-  <ul>
-    <li></li>
-    <li></li>
-  </ul>
-</div>
+    <div class="footer_menu">
+      <div class="logo">
+      <div>
+        
+      </div>
+      </div> <!-- logo -->
+      <div class="mode">
+        <ul>
+          <li><a href="#">회사소개</a></li>
+          <li><a href="#">제품소개</a></li>
+          <li><a href="#">R%D</a></li>
+          <li><a href="#">ESG</a></li>
+          <li><a href="#">홍보센터</a></li>
+          <li><a href="#">고객센터</a></li>
+        </ul>
+        </div><!-- mode -->
+      </div><!--footer_menu-->
+      <div>
+        <ul>
+          <li><p>대표이사:정상엽</p></li>
+          <li><p>본사/연구소:서울시 강서구 공항대로165 D동 3층</p></li>
+          <li><P>공장:충청북도 청주시 흥덕구 오송읍 연제리</P></li>
+          <li><P>사업자등록번호:6013232423</P></li>
+        </ul>
+        <ul>
+          <li><P>개인정보 처리방침 이메일무단수집거부</P></li>
+          <li><P>Copyright @ 2024 Pp.All rights reserved.</P></li>
+        </ul>
+      </div>
   </footer><!-- footer -->
 </body>
 </html>
