--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -30,32 +30,38 @@
     <i class="fa-solid fa-bars" style="color: #63E6BE;"></i>
   </div><!--toggleline-->
 </div><!--title_menu-->
-<div class="intro">
-<div>
+<div class="t_intro">
   <section>
-    <p>About</p>
-    <p>Pp는인류와 과학기술의 <br> 더 나은 미래를 위해 연구를 지속하고 있습니다.</p>
-    <section>
-      <button>
-        company <a href=""></a>
-      </button>
-    </section>
+    <h1>A Safe And Health Life </h1>
+    <p>Pp는 조기진단을 통해 질병을 예방하거나 조기치료를 가능하게 하여 <br> 궁극적으로 인간이 더 안전하고 건강한 삶을 오래 누릴 수 있도록 돕습니다.</p>
   </section>
 </div>
-<div>
-  <ul class="in">
-    <li><a href=""></a></li>
-    <li></li>
-    <li></li>
-  </ul>
-  <ul class="in">
-    <li><a href=""></a></li>
-    <li></li>
-    <li></li>
-  </ul>
-</div>
-</div><!-- intro -->
-</div>
+</div><!--"menu_pic"-->
+<div class="intro">
+  <div>
+    <section class="int">
+      <p>About</p>
+      <p>Pp는인류와 과학기술의 <br> 더 나은 미래를 위해 연구를 지속하고 있습니다.</p>
+      <section>
+        <button>
+          company <a href=""></a>
+        </button>
+      </section>
+    </section>
+  </div>
+  <div>
+    <ul class="in">
+      <li><a href=""></a></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <ul class="in">
+      <li><a href=""></a></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+  </div><!-- intro -->
 <div class="intro2">
   <div class="head">
     <p>About</p>
