--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -114,68 +114,43 @@
         </button></li>
       </ul>
       <ul class="card">
-        <li><p>면역진단</p><p>dddddddd</p></li>
-        <li><p>01</p></li>
-        <li><h1>알러지</h1></li>
-        <li><h3>AdanSure㈜ AlloScreen
-          Max108 Panel</h3></li>
-        <li><p>단 한번의 검사로 108종의
-          알레르기의 대한 결과를 확인할수있는
-          알러지스크리닝 제품</p></li>
+        <li><p>분자진단</p>
+          <p>03</p></li>
+        <li><h1>호흡기 바이러스</h1></li>
+        <li><h3>AdanSure RV-Plus 
+          real-time RT-PCR</h3></li>
+        <li><p>호흡기 바이러스 15종을<br> 한번에 검사할 수 있는 시약</p></li>
         <li><button>
           view → <a href=""></a>
         </button></li>
       </ul> 
       <ul class="card">
-        <li><p>면역진단</p></li>
-        <li><p>02</p></li>
-        <li><h1>잠벅결핵</h1></li>
-        <li><h3>AdanSure I3 TB-lGRA</h3></li>
-        <li><p>체혈 다음 날 바로 결과 확인이
-          가능한, 잠복결핵 검사의 완벽한 솔루션
+        <li><p>분자진단</p>
+          <p>05</p></li>
+        <li><h1>핵산추출</h1></li>
+        <li><h3>AdanSure E3 System</h3></li>
+        <li><p>한번에 48개 검체를 약15~35분 내로 <br>
+           빠르게 추출할 수 있는 핵산추출장치
         </p></li>
         <li><button>
           view → <a href=""></a>
         </button></li>
-      </ul> <ul class="card">
-        <li><p>분자진단</p></li>
-        <li><p>03</p></li>
-        <li><h1>호흡기 바이러스</h1></li>
-        <li><h3>AdanSure RV-Plus 
-          real-time RT-PCR</h3></li>
-        <li><p>호흡기 바이러스 15종을 <br>
-        한번에 검사할 수 있는 시약</p></li>
-        <li><button>
-          view → <a href=""></a>
-        </button></li>
-      </ul> <ul class="card">
-        <li><p>분자진단</p></li>
-        <li><p>04</p></li>
-        <li><h1>결핵 및 비결핵상산균</h1></li>
-        <li><h3>AdanSure TB/NTM <br>
-        real-time PCR</h3></li>
-        <li><p>결핵균 및 비결핵 항산균을<br>
-        동시에 검출할 수 있는 시약</p></li>
-        <li><button>
-          view → <a href=""></a>
-        </button></li>
-      </ul>
+      </ul> 
     </div>
     <div class="cards2">
       <ul class="card">
-        <li><p>분자진단</p></li>
-        <li><p>03</p></li>
-        <li><h1>호흡기 바이러스</h1></li>
-        <li><h3>AdanSure RV-Plus 
-          real-time RT-PCR</h3></li>
-        <li><p>호흡기 바이러스 15종을 <br>
-        한번에 검사할 수 있는 시약</p></li>
+        <li><p>면역진단</p>
+          <p>02</p></li>
+        <li><h1>잠복결핵</h1></li>
+        <li><h3>AdanSure I3 TB-IGRA </h3></li>
+        <li><p>체혈 다음 날 바로 결과 확인이 가능한, <br>
+        잠복결핵 검사의 완벽한 솔루션</p></li>
         <li><button>
           view → <a href=""></a>
         </button></li>
       </ul> <ul class="card">
-        <li><p>분자진단</p></li>
-        <li><p>04</p></li>
+        <li><p>분자진단</p>
+          <p>04</p></li>
         <li><h1>결핵 및 비결핵상산균</h1></li>
         <li><h3>AdanSure TB/NTM <br>
         real-time PCR</h3></li>
@@ -192,18 +167,19 @@
 </div><!-- intro2 -->
 <div class="main">
   <div class="product">
-   <p>
-    ESG MANAGEMENT
-   </p> 
-   <div class="promo">
-    <h1>
-      쉬운길보다는 옳은 길로,<br>
-      더 나은 미래를 위한 탐구는 계속됩니다.
-    </h1>
-    <button></button>
-   </div>
-  </div>
-  <div class="p_lntro">
+    <div>
+      <p>
+       ESG MANAGEMENT
+      </p> 
+       <h1>
+         쉬운길보다는 옳은 길로,<br>
+         더 나은 미래를 위한 탐구는 계속됩니다.
+       </h1>
+      </div>
+      <button>
+        view → <a href=""></a>
+      </button>  </div>
+  <div class="p_lntro2">
 <ul>
   <li><a href=""></a><p>
     Environmental<br>Safety and Health<br>(EHS)
