--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -208,22 +208,31 @@
   </div>
   </div><!-- main -->
   <div class="site">
-<div><p>CAREERS
-</p></div>
+    <div class="product">
+      <div>
+        <p>
+          CAREERS
+        </p> 
+         <h1>
+          인비트로스에서 무한한 가능성을 키울 <br>인재를 찾습니다.
+         </h1>
+        </div>
+        <button>
+          view → <a href=""></a>
+        </button> 
+       </div>
+
 <div>
-  <p>인비트로스에서 무한한 가능성을 키울 <br>인재를 찾습니다.</p>
-  <button><a href=""></a></button>
-</div>
-<div><ul>
+  <ul class="talent">
   <li class="box">
-     <b>IN</b><b>navation</b>
+     <b class="fon">IN</b><b>navation</b>
      <br>
      <p>획기적이고 창의적인
       <br>아이디어를 제시하고 
       만들어가는<br>능력을 갖춘 인재</p>
   </li>
   <li class="box">
-    <b>VI</b><b>sionary</b>
+    <b class="fon">VI</b><b>sionary</b>
     <br>
     <p>비전을 간추고 미래를
      <br>예측하고 선제적으로
@@ -231,16 +240,16 @@
      <br>역량을 갖춘 인재</p>
  </li>
  <li class="box">
-  <b>TR</b><b>ailblazer</b>
+  <b class="fon">TR</b><b>ailblazer</b>
   <br>
   <p>새로운 길을 개척하며
    <br>혁신적으로 변화를 열어가는 
    <br>리더십을 가진 인재</p>
 </li>
 <li class="box">
-  <b>o</b><b>pen-minded</b>
+  <b class="fon">o</b><b>pen-minded</b>
   <br>
-  <b>s</b><b>ynthesizer</b>
+  <b class="fon">s</b><b>ynthesizer</b>
   <br>
   <p>다양한 아이디어를
    <br>받아들이고
