--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -214,7 +214,7 @@
           CAREERS
         </p> 
          <h1>
-          인비트로스에서 무한한 가능성을 키울 <br>인재를 찾습니다.
+            Pp에서 무한한 가능성을 키울 <br>인재를 찾습니다.
          </h1>
         </div>
         <button>
@@ -225,14 +225,14 @@
 <div>
   <ul class="talent">
   <li class="box">
-     <b class="fon">IN</b><b>navation</b>
+     <b class="fon">IN</b><b class="fon2">navagation</b>
      <br>
      <p>획기적이고 창의적인
       <br>아이디어를 제시하고 
       만들어가는<br>능력을 갖춘 인재</p>
   </li>
   <li class="box">
-    <b class="fon">VI</b><b>sionary</b>
+    <b class="fon">VI</b><b class="fon2">sionary</b>
     <br>
     <p>비전을 간추고 미래를
      <br>예측하고 선제적으로
@@ -240,16 +240,16 @@
      <br>역량을 갖춘 인재</p>
  </li>
  <li class="box">
-  <b class="fon">TR</b><b>ailblazer</b>
+  <b class="fon">TR</b><b class="fon2">ailblazer</b>
   <br>
   <p>새로운 길을 개척하며
    <br>혁신적으로 변화를 열어가는 
    <br>리더십을 가진 인재</p>
 </li>
 <li class="box">
-  <b class="fon">o</b><b>pen-minded</b>
+  <b class="fon">o</b><b class="fon2">pen-minded</b>
   <br>
-  <b class="fon">s</b><b>ynthesizer</b>
+  <b class="fon">s</b><b class="fon2">ynthesizer</b>
   <br>
   <p>다양한 아이디어를
    <br>받아들이고
@@ -259,37 +259,46 @@
 </div>
   </div><!-- site -->
 <div class="news">
-<div>
-  <div><p>News Room
-  </p></div>
-  <div>
-    <p>인비트로스의 최신 소식을<br>만나보세요</p>
-    <button><a href=""></a></button>
+  <div class="newsint">
+    <div>
+      <p>
+        News Room
+      </p> 
+       <h1>
+        Pp의 최신 소식을 만나보세요.
+       </h1>
+    </div>
+    
+    <button>
+      view → <a href=""></a>
+    </button> 
   </div>
+   </div>
 </div>
-<div>
-  <ul>
-    <li><img src="" alt=""></li>
-    <li><p>공지사항</p><p>LMCE 2024 Education 
-      Workshop 진행</p></li>
+<div class="listmain">
+  <ul class="newslist">
+    <li><img src="./img/base1.png" alt=""></li>
+    <li><h1>공지사항</h1><h2>LMCE 2024 Education 
+      Workshop 진행</h2></li>
       <li><p>일정:2024년 9월26일(목) 
         오전8시</p><p>-장소:코엑스 서울, B2 Hall, Room A</p>
       <p>2024-09-24</p></li>
   </ul>
 </div>
-   <div>
-    <ul>
-      <li><img src="" alt=""></li>
-      <li><p>보도자료</p><p>코로나19 키트 시장 진출</p></li>
-        <li><p>일정:2024년 8월7일 
-          </p><p>
-            'AdvanSure™ SARS-CoV-2 IgG (S1) <br>
-             ELISA' 수출용 품목허가 [프레스나인] <br>
-            LG화학이 코로나19 진단키트 <br>
-            시장에 뛰어든다</p>
-        </li>
-    </ul>
-   </div>
+    <div class="listmain2">
+      <ul class="newslist2">
+        <li><img src="./img/base2.png" alt=""></li>
+        <li><h1>보도자료</h1><h2>코로나19 키트 시장 진출</h2></li>
+          <li><p>일정:2024년 8월7일 
+            </p><p>
+              'AdvanSure™ SARS-CoV-2 IgG (S1) <br>
+               ELISA' 수출용 품목허가 [프레스나인] <br>
+              LG화학이 코로나19 진단키트 <br>
+              시장에 뛰어든다</p>
+          </li>
+      </ul>
+    </div>
+
    <ul>
     <li></li>
     <li></li>
@@ -305,7 +314,8 @@
     <div class="footer_menu">
       <div class="logo">
       <div>
-        
+        <i class="fa-brands fa-pied-piper-pp" style="color: #63E6BE;"></i>
+
       </div>
       </div> <!-- logo -->
       <div class="mode">
