--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -315,7 +315,6 @@
       <div class="logo">
       <div>
         <i class="fa-brands fa-pied-piper-pp" style="color: #63E6BE;"></i>
-
       </div>
       </div> <!-- logo -->
       <div class="mode">
@@ -329,15 +328,16 @@
         </ul>
         </div><!-- mode -->
       </div><!--footer_menu-->
-      <div>
+      <div class="last">
         <ul>
           <li><p>대표이사:정상엽</p></li>
           <li><p>본사/연구소:서울시 강서구 공항대로165 D동 3층</p></li>
           <li><P>공장:충청북도 청주시 흥덕구 오송읍 연제리</P></li>
           <li><P>사업자등록번호:6013232423</P></li>
         </ul>
-        <ul>
+        <ul class="person">
           <li><P>개인정보 처리방침 이메일무단수집거부</P></li>
+          <br>
           <li><P>Copyright @ 2024 Pp.All rights reserved.</P></li>
         </ul>
       </div>
