--- a/웹페이지만들기/index.html
+++ b/웹페이지만들기/index.html
@@ -28,7 +28,17 @@
       <p>Loading...</p>
       <div id="'lading-screen"></div>
     </div>
+<section id="modal">
+  <div id="modal-content">
+    <h1>경력</h1>
+     <p>
+      캐나다 밴쿠버에 있는 웹 제작 학교를 졸업했습니다. 캐나다와 호주, 영국 기업에서 웹 디자이너로 일했습니다.
+     </p>
+     <button id="close">닫기</button>
+  </div>
+</section>
 
+<!--네비게이션-->
     <nav>
       <!--여닫기 버튼 구현-->
       <button id="menu-open" class="btn-menu">
@@ -84,13 +94,14 @@
     <!--3 concept-->
     <section class="concept">
       <div class="wrapper">
-        <h2 class="title">Concept</h2>
-        <p>
+        <h2 class="title fadein">Concept</h2>
+        <p class="fadein">
           매일 당연했던 날들을 아주 조금 화려하게 꾸미고 싶다는 생각으로부터
           새로운 패션 브랜드가 생겨났습니다. 가볍고 부드러우며 착용감이 좋은
           소재를 베이스로 하여 어떤 순간에도 부드러운 미소로 지낼 수 있을
           거예요. WCB Fashion Collection에서 '당신다움'을 함께 찾아보시겠어요?
         </p>
+        <button id="open">상세 보기</button>
       </div>
       <img src="images/concept.jpg" alt="" />
     </section>
@@ -101,7 +112,7 @@
         <img src="images/img1.jpg" alt="" />
       </div>
       <div class="gallery-content wrapper">
-        <h2 class="title">Lookbook</h2>
+        <h2 class="title fadein">Lookbook</h2>
         <ul class="gallery-thumbnails">
           <li><img src="images/img1.jpg" alt="" /></li>
           <li><img src="images/img2.jpg" alt="" /></li>
@@ -119,12 +130,12 @@
     <!--5 shop-->
     <section class="shop">
       <div class="shop-content wrapper">
-        <h2 class="title">Shop</h2>
-        <p>언제나 무료 배송. 편리한 온라인 샵을 이용해주세요.</p>
-        <a class="btn" href="#">온라인 샵</a>
+        <h2 class="title fadein">Shop</h2>
+        <p class="fadein">언제나 무료 배송. 편리한 온라인 샵을 이용해주세요.</p>
+        <a class="btn fadein" href="#">온라인 샵</a>
 
-        <h3>롯폰기점</h3>
-        <p>
+        <h3 class="fadein">롯폰기점</h3>
+        <p class="fadein">
           도쿄도 미나토구 롯폰기2-4-5<br />
           영업일：금・토・일・휴일<br />
           영업시간:11:00〜18:00
