--- a/기업형홈페이지/homepage.html
+++ b/기업형홈페이지/homepage.html
@@ -6,6 +6,7 @@
   <title>page</title>
   <script src="https://kit.fontawesome.com/103d787f99.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/기업형홈페이지/homepage.css">
+<script src="/기업형홈페이지/script1.js"></script>
 </head>
 <body>
   <div class="container">
@@ -180,7 +181,8 @@
         view → <a href=""></a>
       </button>  </div>
   <div class="p_lntro2">
-<ul>
+    <div class="overlay"></div>    <!------------------------------------------------------------------------------------------------->
+<ul class="bo">
   <li><a href=""></a><p>
     Environmental<br>Safety and Health<br>(EHS)
     <br>
@@ -190,14 +192,14 @@
       (EHS)경영</p>
   </p></li>
 </ul>
-<ul>
+<ul class="bo">
   <li><a href=""></a><p>
     Ethical<br>management
   </p>
   <p>윤리경영</p>
       </li>
 </ul>
-<ul>
+<ul class="bo">
   <li><a href=""></a><p>
     compliance <br>
   management</p>
@@ -224,6 +226,7 @@
 
 <div>
   <ul class="talent">
+    <div class="overlay2"></div>
   <li class="box">
      <b class="fon">IN</b><b class="fon2">navagation</b>
      <br>
@@ -336,7 +339,7 @@
           <li><P>사업자등록번호:6013232423</P></li>
         </ul>
         <ul class="person">
-          <li><P>개인정보 처리방침 이메일무단수집거부</P></li>
+          <li class="smail"><P>개인정보 처리방침 이메일무단수집거부</P></li>
           <br>
           <li><P>Copyright @ 2024 Pp.All rights reserved.</P></li>
         </ul>
