--- a/사이트만들기/index.html
+++ b/사이트만들기/index.html
@@ -1,42 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="/사이트만들기/css/style.css">
-  <script src="/웹페이지만들기/js/script.js"></script>
-  <title>Document</title>
-</head>
-<body>
-  <div class="1page">
-   <div class="menu"></div>
-   <div class="videos"></div>  
-  </div>
-  <div class="2page">
-    <section class="titles"></section>
-    <div class="int_main"></div>
-  </div>
-  <div class="3page">
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-  </div>
-  <div class="4page">
-    <div></div>
-    <div></div>
-  </div>
-  <div class="5page">
-    <div></div>
-    <div></div>
-  </div>
-  <div class="6page">
-    <div></div>
-  </div>
- <footer>
-  <div></div>
-  <div></div>
- </footer>
-</body>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
+    />
+    <script
+      src="https://kit.fontawesome.com/103d787f99.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/script.js"></script>
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="menu">
+      <ul class="bn1">
+        <li>
+          <i class="fa-solid fa-manat-sign" style="color: #ffffff"></i>
+        </li>
+      </ul>
+      <ul class="bn2">
+        <li>MOTIONCAPTURE</li>
+        <li>Product</li>
+        <li>Insight</li>
+        <li>Careers</li>
+      </ul>
+
+      <ul class="bn3">
+        <div class="menu-icon">
+          <span></span>
+          <span></span>
+        </div>
+      </ul>
+      <ul class="bn4">
+        <li><a href="">Contact us</a></li>
+      </ul>
+    </div>
+    <div class="hide">
+       <ul>
+        <li>Years</li>
+        <li>Goods</li>
+        <li>Event</li>
+        <li>Game</li>
+       </ul>
+       <ul>
+        <li>Price</li>
+        <li>kind</li>
+        <li>histery</li>
+        <li>h</li>
+       </ul>
+       <ul>
+        <li>h</li>
+        <li>h</li>
+        <li>h</li>
+        <li>d</li>
+       </ul>
+       <ul>
+        <li>d</li>
+        <li>d</li>
+        <li>d</li>
+        <li>d</li>
+       </ul>
+
+       
+    </div>
+
+    <div class="start">
+      <div class="re">
+        <div class="videos">
+          <video autoplay muted loop id="bg-video">
+            <source src="./images/video.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
+
+        <div class="word">
+          <h1>Good Product</h1>
+          <br />
+          <h1>best Services</h1>
+          <br />
+          <h1>Best Solution</h1>
+        </div>
+      </div>
+    </div>
+    <div class="second_page">
+      <section class="titles"></section>
+      <div class="int_main"></div>
+    </div>
+    <div class="third_page">
+      <div>h1</div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <div class="four_page">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="five_page">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="six_page">
+      <div></div>
+    </div>
+    <footer>
+      <div></div>
+      <div></div>
+    </footer>
+  </body>
 </html>
