--- a/사이트만들기/index.html
+++ b/사이트만들기/index.html
@@ -131,19 +131,39 @@
         </section>
       
       </section>
-    
-      <div class="int_main">
-      <ul>
-
-      </ul>
-
+      </div>
+    <div class="third_page">
+      <div class="num_log">
+        <h1>Corporation</h1>
+      </div>
+  <section>
+    <div class="numbers number1">
+      <div class="mum">
+        <div><h1 count-data="15">15</h1></div>
+        <div>
+          <h3>year</h3>
+          <p>다양한 보안 노하우 & 기술경력</p>
+        </div>  
+      </div>
+  </div>
+  <div class="numbers number2">
+    <div class="mum num2">
+      <div><h1 count-data="85">85</h1></div>
+      <div>
+        <h3>year</h3>
+        <p>다양한 보안 노하우 & 기술경력</p>
       </div>
     </div>
-    <div class="third_page">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+</div>
+<div class="numbers number3">
+  <div class="mum">
+    <div><h1 count-data="15">15</h1></div>
+    <div>
+      <h3>year</h3>
+      <p>다양한 보안 노하우 & 기술경력</p>
+    </div>
+  </section>
+    </div>
     </div>
     <div class="four_page">
       <div></div>
