--- a/사이트만들기/index.html
+++ b/사이트만들기/index.html
@@ -139,31 +139,36 @@
   <section>
     <div class="numbers number1">
       <div class="mum">
-        <div><h1 count-data="15">15</h1></div>
+        <div><h1 id="count1"count-data1="15">0</h1></div>
         <div>
           <h3>year</h3>
-          <p>다양한 보안 노하우 & 기술경력</p>
+          <p>다양한 보안</p>
+          <p>노하우 & 기술경력</p>
         </div>  
       </div>
   </div>
   <div class="numbers number2">
     <div class="mum num2">
-      <div><h1 count-data="85">85</h1></div>
+      <div><h1 id="count2" count-data2="85">0</h1></div>
       <div>
-        <h3>year</h3>
-        <p>다양한 보안 노하우 & 기술경력</p>
+        <h3>+%</h3>
+        <p>보안 전문</p>
+        <p>엔지니어 구성</p>
       </div>
     </div>
 </div>
 <div class="numbers number3">
   <div class="mum">
-    <div><h1 count-data="15">15</h1></div>
+    <div><img src="" alt=""></div>
     <div>
-      <h3>year</h3>
-      <p>다양한 보안 노하우 & 기술경력</p>
+      <h3>지속적인 매출 성장</h3>
+      <p>국내 주요 기업들이 선택한/<p>
+        <p> 보안전문 파트너</p>
     </div>
-  </section>
     </div>
+    </div> 
+    </section> 
+    </div> ---------<!---third page end----->
     </div>
     <div class="four_page">
       <div></div>
