--- a/사이트만들기/index.html
+++ b/사이트만들기/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/script.js"></script>
+    
     <title>Document</title>
   </head>
   <body>
@@ -227,5 +227,12 @@
       <div></div>
       <div></div>
     </footer>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
